# SlimeVR-Tracker-nRF

./: CMakeLists.txt  Kconfig  LICENSE  README.md  prj.conf  sysbuild.cmake
aero/aero_tracker/: Kconfig.aero_tracker_uf2  aero_tracker_uf2.dts  aero_tracker_uf2.yaml  aero_tracker_uf2_defconfig  board.yml
dawnoriginal/dawn_tracker_mini_uf2/: Kconfig.dawn_tracker_mini_uf2  board.cmake  board.yml  dawn_tracker_mini_uf2.dts  dawn_tracker_mini_uf2.yaml  dawn_tracker_mini_uf2_defconfig
foxapplication/foxsmol40/: Kconfig.foxsmol40_uf2  board.c  board.yml  foxsmol40_uf2.dts  foxsmol40_uf2.yaml  foxsmol40_uf2_defconfig
foxapplication/foxsmolv1_spi_uf2/: Kconfig.foxsmolv1_spi_uf2  board.yml  foxsmolv1_spi_uf2.dts  foxsmolv1_spi_uf2.yaml  foxsmolv1_spi_uf2_defconfig
foxapplication/foxsnackeco/: Kconfig.foxsnackeco_uf2  board.yml  foxsnackeco_uf2.dts  foxsnackeco_uf2.yaml  foxsnackeco_uf2_defconfig
foxapplication/foxsnacklite/: Kconfig.foxsnacklite_uf2  board.c  board.yml  foxsnacklite_uf2.dts  foxsnacklite_uf2.yaml  foxsnacklite_uf2_defconfig
hulimiao/nekonya_tracker_uf2/: Kconfig.nekonya_tracker_uf2  board.cmake  board.yml  nekonya_tracker_uf2.dts  nekonya_tracker_uf2.yaml  nekonya_tracker_uf2_defconfig
mocha-elec/mochi/: mochi_uf2.dts  mochi_uf2_defconfig
nekumori/kawazu/: kawazu_uf2.dts  kawazu_uf2_defconfig
nini_slimevr/nini_slimevr_mag_uf2/: Kconfig.nini_slimevr_mag_uf2  board.cmake  board.yml  nini_slimevr_mag_uf2.dts  nini_slimevr_mag_uf2.yaml  nini_slimevr_mag_uf2_defconfig
nordic/promicro_uf2/: board.c  board.yml  promicro_uf2.dts  promicro_uf2_chrysalis.dts  promicro_uf2_chrysalis_defconfig  promicro_uf2_default_i2c.dts  promicro_uf2_default_i2c.yaml  promicro_uf2_default_i2c_defconfig  promicro_uf2_default_spi.dts  promicro_uf2_default_spi.yaml
pm_static/: nrf52833_uf2_sd.yml  nrf52840_uf2_sd.yml
socs/: nrf52811.overlay  nrf52820.overlay  nrf52840.overlay
socs/common/: nrf52805_nrf52810_nrf52811.overlay  nrf52820_nrf52832.overlay
src/: build_defines.h  console.c  console.h  globals.h  hid.c  hid.h  main.c  retained.c  retained.h  usb.c  util.c  util.h
src/connection/: connection.c  connection.h  esb.c  esb.h  tdma.c  tdma.h
src/sensor/: calibration.c  calibration.h  interface.c  interface.h  scan.c  scan.h  scan_ext.c  scan_ext.h  scan_spi.c  scan_spi.h  sensor.c  sensor.h  sensor_none.c  sensor_none.h  sensors.h  sensors_enum.h
src/sensor/fusion/: fusions.h
src/sensor/fusion/eqf/: eqf.c  eqf.h
src/sensor/fusion/vqf/: vqf.c  vqf.h
src/sensor/imu/: BMI270.c  BMI270.h  BMI270_firmware.h  BNO08x.c  BNO08x.h  ICM42686.c  ICM42686.h  ICM42688.c  ICM42688.h  ICM45686.c  ICM45686.h  LSM6DSM.c  LSM6DSM.h  LSM6DSO.c  LSM6DSO.h  LSM6DSV.c  LSM6DSV.h
src/sensor/mag/: AK09940.c  AK09940.h  BMM150.c  BMM150.h  BMM350.c  BMM350.h  IST8306.c  IST8306.h  IST8308.c  IST8308.h  LIS2MDL.c  LIS2MDL.h  LIS3MDL.c  LIS3MDL.h  MMC5983MA.c  MMC5983MA.h  QMC6309.c  QMC6309.h
src/sensor/magneto/: magneto1_4.c  magneto1_4.h  mymathlib_matrix.c  mymathlib_matrix.h
src/system/: battery.c  battery.h  battery_tracker.c  battery_tracker.h  clock_control.c  clock_control.h  esb_ota.c  esb_ota.h  led.c  led.h  ota_ram_engine.inc  power.c  power.h  rtt_console.h  status.c  status.h  system.c  system.h  test_mode.c  test_mode.h  watchdog.c  watchdog.h
